force-app/main/default/objects/External_Contract_Shipment__c/External_Contract_Shipment__c.object-meta.xml
<CustomObject>
    <label>External Contract Shipment</label>
    <nameField>
        <displayFormat>ECS-{000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Contract Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>