force-app/main/default/objects/External_Contract_Shipment__c/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>External Contract Shipments (Bill To Account)</relationshipLabel>
    <relationshipName>External_Contract_Shipments1</relationshipName>
    <type>Lookup</type>
</CustomField>