force-app/main/default/objects/External_Contract_Shipment__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Address</label>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>External Contract Shipments</relationshipLabel>
    <relationshipName>External_Contract_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>