force-app/main/default/objects/External_Contract_Shipment__c/fields/BVC_Branch__c.field-meta.xml
<CustomField>
    <fullName>BVC_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BVC Branch</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>External Contract Shipments</relationshipLabel>
    <relationshipName>External_Contract_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>