force-app/main/default/objects/External_Contract_Shipment__c/fields/Confirmed_By_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_By_Mobile__c</fullName>
    <label>Confirmed By Mobile</label>
    <type>Phone</type>
</CustomField>