force-app/main/default/objects/External_Contract_Shipment__c/fields/Consignee_Name__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Name__c</fullName>
    <formula>Shipment__r.Consignee_Name_TMS__r.Name</formula>
    <label>Consignee Name</label>
    <type>Text</type>
</CustomField>