force-app/main/default/objects/External_Contract_Shipment__c/fields/Consignee_PAN__c.field-meta.xml
<CustomField>
    <fullName>Consignee_PAN__c</fullName>
    <label>Consignee PAN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>