force-app/main/default/objects/External_Contract_Shipment__c/fields/Destination_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Destination_Pincode__c</fullName>
    <label>Destination Pincode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>