force-app/main/default/objects/External_Contract_Shipment__c/fields/Destination_State__c.field-meta.xml
<CustomField>
    <fullName>Destination_State__c</fullName>
    <label>Destination State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>