force-app/main/default/objects/External_Contract_Shipment__c/fields/Destination_Type__c.field-meta.xml
<CustomField>
    <fullName>Destination_Type__c</fullName>
    <label>Destination Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>