force-app/main/default/objects/External_Contract_Shipment__c/fields/Exhibition__c.field-meta.xml
<CustomField>
    <fullName>Exhibition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition</label>
    <referenceTo>ST_Exhibition__c</referenceTo>
    <relationshipLabel>External Contract Shipments</relationshipLabel>
    <relationshipName>External_Contract_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>