force-app/main/default/objects/External_Contract_Shipment__c/fields/Exhibition_Name__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Name__c</fullName>
    <formula>Exhibition__r.ST_Exhibition_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exhibition Name</label>
    <type>Text</type>
</CustomField>