force-app/main/default/objects/External_Contract_Shipment__c/fields/External_Contract__c.field-meta.xml
<CustomField>
    <fullName>External_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Contract</label>
    <referenceTo>External_Contract__c</referenceTo>
    <relationshipLabel>External Contract Shipments</relationshipLabel>
    <relationshipName>External_Contract_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>