force-app/main/default/objects/External_Contract_Shipment__c/fields/Freight_Charges_c__c.field-meta.xml
<CustomField>
    <fullName>Freight_Charges_c__c</fullName>
    <label>Freight Charges</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>