force-app/main/default/objects/External_Contract_Shipment__c/fields/Fuel_Charges__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Charges__c</fullName>
    <label>Fuel Charges</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>