force-app/main/default/objects/External_Contract_Shipment__c/fields/Handling_Charges_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Handling_Charges_Outbound__c</fullName>
    <label>Handling Charges - Outbound</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>