force-app/main/default/objects/External_Contract_Shipment__c/fields/Initiator_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Initiator_Mobile__c</fullName>
    <label>Initiator Mobile</label>
    <type>Phone</type>
</CustomField>