force-app/main/default/objects/External_Contract_Shipment__c/fields/Initiator_PAN__c.field-meta.xml
<CustomField>
    <fullName>Initiator_PAN__c</fullName>
    <label>Initiator PAN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>