force-app/main/default/objects/External_Contract_Shipment__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <formula>Shipment_Summary__r.Invoice__r.Name</formula>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>