force-app/main/default/objects/External_Contract_Shipment__c/fields/Liability_Charges__c.field-meta.xml
<CustomField>
    <fullName>Liability_Charges__c</fullName>
    <label>Liability Charges</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>