force-app/main/default/objects/External_Contract_Shipment__c/fields/Liability_Cover_By_BVC__c.field-meta.xml
<CustomField>
    <fullName>Liability_Cover_By_BVC__c</fullName>
    <label>Liability Cover By BVC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>