force-app/main/default/objects/External_Contract_Shipment__c/fields/Net_Weight_gms__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight_gms__c</fullName>
    <label>Net Weight (gms)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>