force-app/main/default/objects/External_Contract_Shipment__c/fields/Number_of_Packages__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Packages__c</fullName>
    <label>Number of Packages</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>