force-app/main/default/objects/External_Contract_Shipment__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>External Contract Shipments</relationshipLabel>
    <relationshipName>External_Contract_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>