force-app/main/default/objects/External_Contract_Shipment__c/fields/Origin_Address__c.field-meta.xml
<CustomField>
    <fullName>Origin_Address__c</fullName>
    <label>Origin Address</label>
    <type>TextArea</type>
</CustomField>