force-app/main/default/objects/External_Contract_Shipment__c/fields/Origin_City__c.field-meta.xml
<CustomField>
    <fullName>Origin_City__c</fullName>
    <label>Origin City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>