force-app/main/default/objects/External_Contract_Shipment__c/fields/Origin_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Origin_Pincode__c</fullName>
    <label>Origin Pincode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>