force-app/main/default/objects/External_Contract_Shipment__c/fields/Pickup_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Date_Time__c</fullName>
    <label>Pickup Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>