force-app/main/default/objects/External_Contract_Shipment__c/fields/Shipment_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Invoice__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Shipment_Summary__r.Invoice__c , &quot;Click Here&quot;, &apos;_self&apos;)</formula>
    <label>Shipment Invoice</label>
    <type>Text</type>
</CustomField>