force-app/main/default/objects/External_Contract_Shipment__c/fields/Shipment_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Number__c</fullName>
    <label>Shipment Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>