force-app/main/default/objects/External_Contract_Shipment__c/fields/Shipment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Summary__c</fullName>
    <label>Shipment Summary</label>
    <referenceTo>External_Contract_Shipment_Summary__c</referenceTo>
    <relationshipLabel>External Contract Shipments</relationshipLabel>
    <relationshipName>External_Contract_Shipments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>