force-app/main/default/objects/External_Contract_Shipment__c/fields/Shipment_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Type_c__c</fullName>
    <label>Shipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collect</fullName>
            </value>
            <value>
                <fullName>Prepaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>