force-app/main/default/objects/External_Contract_Shipment__c/fields/Shipment_Value__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Value__c</fullName>
    <label>Shipment Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>