force-app/main/default/objects/External_Contract_Shipment__c/fields/Shipper_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipper_Name__c</fullName>
    <formula>Shipment__r.Shipper_Name_TMS__r.Name</formula>
    <label>Shipper Name</label>
    <type>Text</type>
</CustomField>