force-app/main/default/objects/External_Contract_Shipment__c/fields/Shipper_PAN__c.field-meta.xml
<CustomField>
    <fullName>Shipper_PAN__c</fullName>
    <label>Shipper PAN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>