force-app/main/default/objects/External_Contract_Shipment__c/fields/Total_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Charge__c</fullName>
    <label>Total Charge</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>