force-app/main/default/objects/External_Contract_Shipment__c/fields/Your_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Your_Reference_No__c</fullName>
    <label>Your Reference No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>