force-app/main/default/objects/External_Contract_Shipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Shipment__c</columns>
    <columns>Product__c</columns>
    <columns>External_Contract__c</columns>
    <columns>Customer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>